--- a/MVC_TTCS/Views/Shared/_Layout.cshtml
+++ b/MVC_TTCS/Views/Shared/_Layout.cshtml
@@ -1,46 +1,4 @@
-﻿@*<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    <link href="~/Content/Site.css" rel="stylesheet" />
-
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-</body>
-</html>
-    *@
+﻿
 
 
 <!DOCTYPE html>
@@ -66,8 +24,8 @@
                 </ul>
                 <div id="head_right">
                     <p id="user_name" style="font-size:30px; color:red;"></p>
-                    @*<button id="btn_login"class="open_login" onclick="clearmain(1)">Đăng nhập</button>
-                    <button id="btn_sigin"class="open_signup" onclick="clearmain(2)">Đăng ký</button>*@
+                    @*<button id="btn_login"class="open_login" onclick="clearmain(1)">đăng nhập</button>
+                    <button id="btn_sigin"class="open_signup" onclick="clearmain(2)">đăng ký</button>*@
 
 
                 </div>
