--- a/MVC_TTCS/Views/Home/Index.cshtml
+++ b/MVC_TTCS/Views/Home/Index.cshtml
@@ -692,7 +692,7 @@
                 }
                 var tmp_input_str = arr_input.join(',');
                 input_input += " " + tmp_input_str
-                if (arr_sum.length+arr_count.length+arr_min.length+arr_max.length+arr_average.length ==0)
+                if (arr_sum.length+arr_count.length+arr_min.length+arr_max.length+arr_average.length ==0 ||arr_groupby.length==0 )
                     input_groupby = "";
 
      
