--- a/MVC_TTCS/Views/Home/Contact.cshtml
+++ b/MVC_TTCS/Views/Home/Contact.cshtml
@@ -20,5 +20,5 @@
             <div class="info">
                 <h2 class="chitietsv">Sinh Viên báo cáo: Nguyễn Trọng Sơn </h2>
             </div>
-            <h5>HCM Ngày....Tháng...Năm... </h5>
+            <h5>HCM Ngày 26 Tháng 4 Năm 2022 </h5>
         </div>
